created index.html file for initial test

--- a/index.html
+++ b/index.html
@@ -3,9 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>MY TRAVEL BLOG</title>
 </head>
 <body>
-    <h1>Hello World!</h1>
+    <header>
+        <h1>My Travel Blog</h1>
+        <nav>
+            <a href="index.html">HOME</a> |
+            <a href="https://travel.usnews.com/Santorini_Greece/" target="_blank">SANTORINI</a> |
+            <a href="https://travel.usnews.com/Bora_Bora/" target="_blank">BORA BORA</a>
+        </nav>
+    </header>
+
+    <form action="/action_page.php">
+        <p>Do you like to travel?</p>
+        <input type="radio" id="Yes" name="travel" value="Yes">
+        <label for="Yes">Yes</label><br>
+        <input type="radio" id="No" name="travel" value="No">
+        <label for="No">No</label><br>
+    </form>
+
+    <footer>
+        <p>&copy; Yunah Kim</p>
+    </footer>
 </body>
 </html>
